# scalping-lotto-numbers

./: .gitignore  README.md  data_processor.py  exceptions.py  lotto_scraper.py  main.py  models.py  pyproject.toml  utils.py
config/: settings.py
docs/: PRD.md
tests/: test_models.py  test_utils.py
